Added:placeOrder method
